--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Ma Bakery</title>
 </head>
 <body>
-  This is just to let you know we're on our way
+  <div id="my-store-37358100"></div>
+  <div>
+    <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?37358100&data_platform=code&data_date=2020-09-25" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-37358100");</script>
+  </div>
 </body>
 </html>
